--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,8 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
-pydantic==2.5.3
-pydantic-settings==2.1.0
+pydantic>=2.11.7
+pydantic-settings>=2.1.0
 
 # ============================================
 # LangChain & LangGraph (AI Agents)
