--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -62,6 +62,11 @@ requests>=2.31.0
 aiohttp>=3.9.1
 
 # ============================================
+# Data Providers (Stock & Crypto)
+# ============================================
+yfinance>=0.2.40
+
+# ============================================
 # Utilities
 # ============================================
 python-dotenv>=1.0.0
